finish the assignment 4

--- a/Assignment4/Assignment4.ipynb
+++ b/Assignment4/Assignment4.ipynb
@@ -7,6 +7,19 @@
    },
    "source": [
     "# Assignment 4\n",
+    "### Question 1\n",
+    "#### Read and summarize the subsection on \"Another Formulation for Ridge Regression and the Lasso\" (pp 220-222).\n",
+    "\n",
+    "<font size=2.5 color=\"red\">Answer: \n",
+    "This subsection introduces a new formulation for lasso and ridge regression. Instead of using λ before the penalty terms $ \\sum_{j=1}^p |\\beta_j| $ or $ \\sum_{j=1}^p \\beta_j^2 $, this formulation uses s to minimize the penalty terms such that $ \\sum_{j=1}^p |\\beta_j| \\leq s $ or $ \\sum_{j=1}^p \\beta_j^2 \\leq s $, which tries to find the set of coefficient estimates with the smallest RSS. When s is very large, the coefficient estimates can be large, too. It's basically yielding the least squares solutions. On the other hand, the coefficient estimates would be very small when s is set small. \n",
+    "\n",
+    "Moreover, the subsection also mentions the connection between the lasso, ridge regression and the best subset selection. Ridge and lasso regression can be regarded as computationally feasible alternatives to best subset selection.\n",
+    "\n",
+    "Last but not least, \"The Variable Selection Property of the Lasso\" draws two figures showing the difference between lasso and ridge regression, which explains why lasso can result in zero coefficient estimates whereas ridge cannot. It's due to the shape of the constraint regions. The ridge regression has a circular constraint with no sharp points, the intersection with the RSS ellipse will not generally occur on an axis. In contrast, the lasso constraint has corners at each of the axes, and so the ellipse will often intersect the constraint region at an axis. That's how we get a zero coefficient.\n",
+    "</font>\n",
+    "\n",
+    "\n",
+    "\n",
     "### Question 2\n",
     "#### In this exercise, we will generate simulated data, then use this data to perform forward feature selection, backward feature selection and lasso.\n",
     "\n",
@@ -242,40 +255,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SequentialFeatureSelector(clone_estimator=True, cv=0,\n",
-       "             estimator=LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False),\n",
-       "             floating=False, forward=False, k_features=1, n_jobs=-1,\n",
-       "             pre_dispatch='2*n_jobs', scoring='r2', verbose=0)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Set forward=False, we get Step Backward Selection\n",
-    "lr_model2 = LinearRegression()\n",
-    "sbs = SFS(lr_model2, \n",
-    "           k_features=1, \n",
-    "           forward=False, \n",
-    "           floating=False, \n",
-    "           scoring='r2',\n",
-    "           cv=0,\n",
-    "           n_jobs=-1)\n",
-    "\n",
-    "sbs.fit(X_1to6.values, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -306,21 +288,35 @@
        "  'feature_names': ('2',)}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Set forward=False, we get Step Backward Selection\n",
+    "lr_model2 = LinearRegression()\n",
+    "sbs = SFS(lr_model2, \n",
+    "           k_features=1, \n",
+    "           forward=False, \n",
+    "           floating=False, \n",
+    "           scoring='r2',\n",
+    "           cv=0,\n",
+    "           n_jobs=-1).fit(X_1to6.values, y)\n",
+    "\n",
     "sbs.subsets_"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<font size=2.5 color=\"red\">\n",
+    "On the one hand, we find feature (2,), (1, 2), (0, 1, 2), (0, 1, 2, 4), (0, 1, 2, 4, 5) and (0, 1, 2, 3, 4, 5) using forward stepwise selection.\n",
+    "    <br><br>On the other hand, we find feature (0, 1, 2, 3, 4, 5), (0, 1, 2, 3, 5)，(0, 1, 2, 5), (0, 1, 2), (1, 2) and (2,) using backward stepwise selection.\n",
+    "    <br><br>As we can see from the results, the subsets are different when k equals to 4 and 5 (we select 4 or 5 features as the subset). We have the same 6 features since we only have 6 features in our dataset. But when k equals to 1, 2, 3, the two methods give the same result.\n",
+    "</font>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -331,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,14 +346,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 12s\n"
+      "Wall time: 1min 15s\n"
      ]
     }
    ],
@@ -378,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +383,7 @@
        "Text(0, 0.5, 'cross validation score')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -414,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -423,20 +419,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "we test 3000 λ in total.\n",
       "best cv score is  0.9999667230827649\n",
       "current λ is  0.014001\n"
      ]
     }
    ],
    "source": [
+    "print(\"we test {} λ in total.\".format(len(λ_list)))\n",
     "print(\"best cv score is \", best_score)\n",
     "print(\"current λ is \", best_λ)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -452,6 +452,33 @@
     "best_lasso_model = Lasso(alpha=best_λ).fit(X_1to6, y)\n",
     "print(\"This is the intercept, AKA ß0: \", best_lasso_model.intercept_)\n",
     "print(\"This is the coefficients: \", best_lasso_model.coef_)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font size=2.5 color=\"red\">\n",
+    "    The resulting coefficient estimates are ß0 =  19.90, ß1 = 21.11, ß2 = 22.47, ß3 = 22.90, ß4 = -0.23, ß5 = 0.0045, ß6 = 0.017.\n",
+    "    The ß0, ß1, ß2, ß3 are very close to my simulation setting. If we round the results to integers, they are exactly the same coefficients as my presetting. And the ß4, ß5 and ß6 are fairly small numbers compared to the ß0, ß1, ß2, ß3.\n",
+    "    \n",
+    "</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 3\n",
+    "#### Read slides 20-32 and summarize them and add the summary at the end of assignment 4.\n",
+    "\n",
+    "<font size=2.5 color=\"red\">\n",
+    "    We need approaches to estimate test error in order to choose the optimal model, because RSS and $R^2$ are only related to the training error. We can either directly estimate the test error (using a validation set approach or cross-validation approach) or indirectly estimate the test eorror by making an adjustment to the training error to account for the bias due to overfitting.\n",
+    "    <br><br>Directly estimate: We can compute the validation set error or cross-validation error for each model under consideration, and then select the model for which the resulting estimated test error is smallest.\n",
+    "    <br><br>Indirectly estimate: We can also use $C_p$, AIC, BIC and Adjusted $R^2$. The $C_p$ statistic adds a penalty to the training RSS to adjust for the fact that the training error tends to underestimate the test error. The AIC criterion is defined for a large class of models fit by maximum likelihood. And the BIC criterion is derived from a Bayesian point of view, but ends up looking similar to $C_p$ and AIC as well. Moreover, the adjusted $R^2$ statistic pays a price for the inclusion of unnecessary variables in the model. As a consequence, we choose <b>lower</b> $C_p$ statistic, AIC, BIC values and <b>bigger</b> adjusted $R^2$ value. \n",
+    "    \n",
+    "    \n",
+    "</font>"
    ]
   }
  ],
