--- a/GroupProject/XGBoost_Sifan.ipynb
+++ b/GroupProject/XGBoost_Sifan.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "data = pd.read_csv(\"one_hot_encoded_data.csv\", index_col=[0])"
+    "data = pd.read_csv(\"../one_hot_encoded_data.csv\", index_col=[0])"
    ]
   },
   {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,16 +257,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 3, 6, 5, 4, 0, 2], dtype=int64)"
+       "array([1, 3, 6, 5, 4, 0, 2])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -293,7 +293,7 @@
        "      dtype='object', length=128194)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,14 +313,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy score is:  0.9893131557393035\n"
+      "The accuracy score is:  0.98927415265806\n"
      ]
     }
    ],
@@ -368,11 +370,167 @@
     "\n",
     "print(\"The accuracy score is: \", score)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cross Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 98.68% (0.26%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "\n",
+    "# CV model\n",
+    "model = xgb.XGBClassifier()\n",
+    "kfold = KFold(n_splits=4, random_state=666)\n",
+    "results = cross_val_score(model, X, y, cv=kfold)\n",
+    "print(\"Accuracy: %.2f%% (%.2f%%)\" % (results.mean()*100, results.std()*100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda/envs/py35/lib/python3.5/site-packages/sklearn/preprocessing/data.py:617: DataConversionWarning: Data with input dtype int64, float64 were all converted to float64 by StandardScaler.\n",
+      "  return self.partial_fit(X, y)\n",
+      "/anaconda/envs/py35/lib/python3.5/site-packages/sklearn/base.py:462: DataConversionWarning: Data with input dtype int64, float64 were all converted to float64 by StandardScaler.\n",
+      "  return self.fit(X, **fit_params).transform(X)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 98.68% (0.26%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "ss = StandardScaler()\n",
+    "X_scaled = ss.fit_transform(X)\n",
+    "# CV model\n",
+    "model = xgb.XGBClassifier()\n",
+    "kfold = KFold(n_splits=4, random_state=666)\n",
+    "results = cross_val_score(model, X_scaled, y, cv=kfold)\n",
+    "print(\"Accuracy: %.2f%% (%.2f%%)\" % (results.mean()*100, results.std()*100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda/envs/py35/lib/python3.5/site-packages/sklearn/preprocessing/data.py:617: DataConversionWarning: Data with input dtype int64, float64 were all converted to float64 by StandardScaler.\n",
+      "  return self.partial_fit(X, y)\n",
+      "/anaconda/envs/py35/lib/python3.5/site-packages/sklearn/base.py:462: DataConversionWarning: Data with input dtype int64, float64 were all converted to float64 by StandardScaler.\n",
+      "  return self.fit(X, **fit_params).transform(X)\n",
+      "/anaconda/envs/py35/lib/python3.5/site-packages/ipykernel/__main__.py:5: DataConversionWarning: Data with input dtype int64, float64 were all converted to float64 by StandardScaler.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy score is:  0.98927415265806\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "X_train_scaled = ss.fit_transform(X_train)\n",
+    "X_test_scaled = ss.transform(X_test)\n",
+    "\n",
+    "# print(type(X_train_scaled))\n",
+    "# Xgboost manages only numeric vectors.\n",
+    "dtrain_scaled = xgb.DMatrix(X_train_scaled, label=y_train.values)\n",
+    "dtest_scaled = xgb.DMatrix(X_test_scaled, label=y_test.values)\n",
+    "\n",
+    "bst2 = xgb.train(plst, dtrain_scaled, num_round)\n",
+    "y_pred2 = bst2.predict(dtest_scaled)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# print(type(y_pred2))\n",
+    "\n",
+    "score2 = accuracy_score(y_test, y_pred2)\n",
+    "\n",
+    "print(\"The accuracy score is: \", score2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy_score(y_pred, y_pred2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(102555,)\n",
+      "(25639,)\n",
+      "(25639,)\n",
+      "(102555, 267)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_pred2.shape)\n",
+    "print(y_test.shape)\n",
+    "print(y_pred.shape)\n",
+    "print(X_train_scaled.shape)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.5",
    "language": "python",
    "name": "python3"
   },
@@ -386,7 +544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
