--- a/GroupProject/Final_version_Plot_Matrix and ROC.ipynb
+++ b/GroupProject/Final_version_Plot_Matrix and ROC.ipynb
@@ -422,76 +422,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Charged off\n",
-      "(98.931, 27.321, 100.0, 0.0, 72.679)\n",
-      "Current\n",
-      "(98.931, 99.83, 88.602, 11.398, 0.16999999999999998)\n",
-      "Default\n",
-      "(98.931, 0.0, 100.0, 0.0, 100.0)\n",
-      " Fully Paid\n",
-      "(98.931, 84.33699999999999, 99.996, 0.004, 15.662999999999998)\n",
-      " In Grace Period\n",
-      "(98.935, 1.8870000000000002, 99.949, 0.051000000000000004, 98.113)\n",
-      "Late (16-30)\n",
-      "(98.931, 0.368, 99.988, 0.012, 99.632)\n",
-      "Late (31-120)\n",
-      "(98.931, 48.88, 99.909, 0.091, 51.12)\n"
-     ]
-    }
-   ],
-   "source": [
-    "def calculator(TP, TN, FP, FN):\n",
-    "    ACC = (TP + TN) / (TP + TN + FP + FN)\n",
-    "    TPR = TP / (TP + FN)\n",
-    "    TNR = TN / (TN + FP)\n",
-    "    FPR = FP / (FP + TN)\n",
-    "    FNR = FN / (FN + TP)\n",
-    "    return round(ACC,5)*100, round(TPR,5)*100, round(TNR,5)*100, round(FPR,5)*100, round(FNR,5)*100\n",
-    "\n",
-    "    \n",
-    "print(\"Charged off\")\n",
-    "print(calculator(103, 23546+1470+5+1+240, 0, 1+141+49+43+2+3+1+6+11+8+2+6+1))\n",
-    "   \n",
-    "    \n",
-    "print(\"Current\")\n",
-    "print(calculator(23546, 103+1470+5+1+240, 1+141+49+43, 1+8+3+2+1+2+6+6+11))\n",
-    "\n",
-    "print(\"Default\")\n",
-    "print(calculator(0, 103+23546+1470+5+1+240, 0, 1+141+49+43+1+8+3+2+1+2+6+6+11))\n",
-    "\n",
-    "\n",
-    "print(\" Fully Paid\")\n",
-    "print(calculator(1470, 103+23546+5+1+240, 1, 141+49+43+1+8+3+2+1+2+6+6+11))\n",
-    "\n",
-    "\n",
-    "print(\" In Grace Period\")\n",
-    "print(calculator(5, 103+23546+1470+1+240, 2+3+8, 141+49+43+1+1+2+6+6+11))\n",
-    "\n",
-    "\n",
-    "print(\"Late (16-30)\")\n",
-    "print(calculator(1, 103+23546+1470+5+240, 1+2, 1+141+49+43+1+8+3+2+6+6+11))\n",
-    "\n",
-    "\n",
-    "print(\"Late (31-120)\")\n",
-    "print(calculator(240, 103+23546+1470+5+1, 11+6+6, 1+141+49+43+1+8+3+2+1+2))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -573,10 +503,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25639\n",
+      "Charged off\n",
+      "(99.996, 99.03800000000001, 100.0, 0.0, 0.962)\n",
+      "Current\n",
+      "(99.02499999999999, 99.932, 88.73400000000001, 11.266, 0.068)\n",
+      "Default\n",
+      "(99.996, 0.0, 100.0, 0.0, 100.0)\n",
+      " Fully Paid\n",
+      "(99.996, 100.0, 99.996, 0.004, 0.0)\n",
+      " In Grace Period\n",
+      "(99.372, 3.2680000000000002, 99.949, 0.051000000000000004, 96.732)\n",
+      "Late (16-30)\n",
+      "(99.74300000000001, 1.562, 99.988, 0.012, 98.438)\n",
+      "Late (31-120)\n",
+      "(99.735, 84.211, 99.909, 0.091, 15.789)\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 103 + 23546+ 1 + 141 +49+43 + 1+1470+ 8+5+3+2 +2+1+1 +6+6+11+240\n",
+    "print(total)\n",
+    "\n",
+    "def calculator(TP, FP, FN):\n",
+    "    TN = total - TP-FP-FN\n",
+    "    ACC = (TP + TN) / (TP + TN + FP + FN)\n",
+    "    TPR = TP / (TP + FN)\n",
+    "    TNR = TN / (TN + FP)\n",
+    "    FPR = FP / (FP + TN)\n",
+    "    FNR = FN / (FN + TP)\n",
+    "    return round(ACC,5)*100, round(TPR,5)*100, round(TNR,5)*100, round(FPR,5)*100, round(FNR,5)*100\n",
+    "\n",
+    "    \n",
+    "print(\"Charged off\")\n",
+    "print(calculator(103, 0, 1))\n",
+    "   \n",
+    "    \n",
+    "print(\"Current\")\n",
+    "print(calculator(23546, 1+141+49+43, 8+2+6 ))\n",
+    "\n",
+    "print(\"Default\")\n",
+    "print(calculator(0, 0, 1))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Confusion matrix, without normalization\n",
+    "# [[  103     0     0     1     0     0     0]\n",
+    "#  [    0 23546     0     0     8     2     6]\n",
+    "#  [    0     1     0     0     0     0     0]\n",
+    "#  [    0     0     0  1470     0     0     0]\n",
+    "#  [    0   141     0     0     5     1     6]\n",
+    "#  [    0    49     0     0     3     1    11]\n",
+    "#  [    0    43     0     0     2     0   240]]\n",
+    "\n",
+    "\n",
+    "# calculator(TP, FP, FN)\n",
+    "print(\" Fully Paid\")\n",
+    "print(calculator(1470, 1, 0))\n",
+    "\n",
+    "\n",
+    "print(\" In Grace Period\")\n",
+    "print(calculator(5, 2+3+8, 141+1+6))\n",
+    "\n",
+    "\n",
+    "print(\"Late (16-30)\")\n",
+    "print(calculator(1, 1+2, 49+3+11))\n",
+    "\n",
+    "\n",
+    "print(\"Late (31-120)\")\n",
+    "print(calculator(240, 11+6+6, 43+2))\n"
+   ]
   },
   {
    "cell_type": "code",
